--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,7 +56,7 @@
         </div> 
       </div>
    
-      <div *ngIf="homeoptionselected && !mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
+      <div *ngIf="homeoptionselected && mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
          <div style=" margin-top: 29px;">
             <div class="postbox">
                 <div class="row userdetail">
@@ -70,8 +70,8 @@
                 <div class="row post">
                    <img src="../../assets/post1.jpg"/>
                 </div>
-                <div class="row likesandcomment">
-                  <div class="innerlikesandcomment">
+                <div class="row likesandcommentmobile">
+                  <div class="innerlikesandcommentmobile">
                     <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
                     <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
                     <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
@@ -210,68 +210,46 @@
       </div>
 
 
-      <div *ngIf="homeoptionselected && mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
+      <div *ngIf="homeoptionselected && !mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
         <div style=" margin-top: 29px;">
-           <div class="postbox">
-               <div class="row userdetail">
-                 <div class="inneruserdetail" style="display: flex;">
-                  <span><img [src]="defaultpicurl" class="postsimage"></span>
-                  <span>UserName</span>
-                  <span>.Timestamp</span>
-                  <span>.follow</span>
-                 </div>
-               </div>
-               <div class="row postmobile">
-                  <img src="../../assets/post1.jpg"/>
-               </div>
-               <div class="row likesandcommentmobile">
-                 <div class="innerlikesandcommentmobile">
-                   <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
-                   <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
-                   <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
-                   <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
-                   <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
-                   <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>
-                   
-                  </div>
-                  <p>n likes</p>
-                  <p>Captions</p>
-                  <input class="commentinput" type="text" placeholder="Add a comment" />
-               </div>
-              
-           </div>
-
-
-           <div class="postbox">
+        
+           <div class="postbox" *ngFor="let postdata of sortData()">
             <div class="row userdetail">
               <div class="inneruserdetail" style="display: flex;">
                <span><img [src]="defaultpicurl" class="postsimage"></span>
-               <span>UserName</span>
-               <span>.Timestamp</span>
-               <span>.follow</span>
+               <span style="margin-right: 4px;">{{postdata.username}}</span>
+               <span *ngIf="!postdata.istodayspost" style="margin-left: 2px;margin-right: 2px;">. {{postdata.ageofpost}}</span>
+               <span *ngIf="postdata.istodayspost" style="margin-left: 2px;margin-right: 2px;">. {{postdata.todaypostage}}</span>
+          
+               <span style="margin-left: 4px; color: #009cf6;font-weight: 500;">. Follow</span>
               </div>
             </div>
-            <div class="row postmobile">
-               <img src="../../assets/post2.jpg"/>
+            <div class="row">
+               <img [src]="postdata.posturl"/>
             </div>
-            <div class="row likesandcommentmobile">
-              <div class="innerlikesandcommentmobile">
-                <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
-                <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
+            <div style="width: 100%;" class="row likesandcomment">
+              <div class="innerlikesandcomment">
+                <span (click)="savelikes(postdata.userid,postdata.imagename)" *ngIf="!postdata.liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
+                <span (click)="dislike(postdata.userid,postdata.imagename)" *ngIf="postdata.liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
                 <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
                 <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
-                <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
-                <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>
+                <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;margin-right: -21px" class="fa-regular fa-bookmark menuiconpost"></i></span>
+                <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;margin-right: -21px" class="fa-solid fa-bookmark menuiconpost"></i></span>
                 
                </div>
-               <p>n likes</p>
-               <p>Captions</p>
+               <p *ngIf="postdata.likes>0" style="margin-top: 10px;font-weight: 600;">{{(postdata.likes)}} likes</p>
+               <p *ngIf="postdata.likes==0" style="margin-top: 10px;font-weight: 600;">Be the first to like this</p>
+               <div style="display: flex;">
+                   <p style="margin-top: -4px;font-weight: 600; ">{{postdata.username}}</p><span style="margin-top: -4px ;margin-left: 10px;max-width:200px;word-wrap:break-word;">{{postdata.postcaption?.substring(0,20)}}</span>
+                </div>
+               <p style="margin-left: 10px;max-width:349px;word-wrap:break-word;">{{postdata.postcaption?.length>20?postdata.postcaption.substring(20):""}}</p>
+            
                <input class="commentinput" type="text" placeholder="Add a comment" />
             </div>
            
         </div>
 
-           
+<!--            
         <div class="postbox">
           <div class="row userdetail">
             <div class="inneruserdetail" style="display: flex;">
@@ -329,9 +307,9 @@
            <input class="commentinput" type="text" placeholder="Add a comment" />
         </div>
        
-    </div>
+    </div> -->
            
-    <div class="postbox">
+    <!-- <div class="postbox">
       <div class="row userdetail">
         <div class="inneruserdetail" style="display: flex;">
          <span><img [src]="defaultpicurl" class="postsimage"></span>
@@ -358,7 +336,7 @@
          <input class="commentinput" type="text" placeholder="Add a comment" />
       </div>
      
-  </div>
+  </div> -->
         </div>
      </div>
 
